Add required --add-opens args for test task